# cloud-project

./: .gitignore  Cargo.toml  readme.md  specification.md
.github/workflows/: deployment.yml  rust.yml
cloud-bucket-cleaner/: Cargo.toml  test_data
cloud-bucket-cleaner/src/: main.rs
cloud-ec2-frontend/: package-lock.json  package.json
cloud-ec2-frontend/src/: App.css  App.js  WaveForm.css
cloud-main/: Cargo.toml  Readme.md
cloud-main-lambda/: Cargo.toml  test_data
cloud-main/src/: main.rs
cloud-sine-generator/: Cargo.toml  Readme.md  build.sh  test_data
cloud-sine-generator/src/: main.rs
cloud-wave-delivery-service/: index.js  readme.md
cloud_bucket_cleaner/: Readme.md
cloud_bucket_cleaner/src/: main.rs
cloud_ec2_frontend/src/: WaveForm.js
cloud_main_lambda/: Cargo.toml
cloud_main_lambda/src/: main.rs
cloud_s3_frontend/: .gitignore  README.md
cloud_s3_frontend/src/: App.js  RequestViewer.js  WaveForm.js
cloud_sine_generator/: Cargo.toml
cloud_sine_generator/src/: main.rs
cloud_wave_delivery_service/: index.js
infra/: .gitignore  main.tf  main_lambda.tf  output.tf  policies.tf  readme.md  sine_generator.tf  variables.tf  wave_delivery_service.tf
sine-generator/: Cargo.toml  readme.md
sine-generator/src/: lib.rs
sine_generator/: .gitignore  Cargo.toml  readme.md
sine_generator/src/: data_formats.rs  frequencyWrite.rs  frequency_writer.rs  lib.rs  main.rs  wav_writer.rs  writer.rs
tonis_spielwiese/: readme.md
tonis_spielwiese/sine_generator/: readme.md
tonis_spielwiese/sine_generator/src/: lib.rs  main.rs
(+1 files in other folders)
