[package]
name = "cloud_sine_generator"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.6.0"
lambda_runtime = "0.6.0"
aws-config = "0.15.0"
aws-sdk-s3 = "0.15.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
sine_generator = { path = "/Users/patrickbaumann/Documents/hdm/4/cloud/project/sine_generator" }
